codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: tui_app_server/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 40)"
---
                                        
  Select Approval Mode                  
                                        
› 1. Read Only (current)  可 读 取 文 件     
                                        
  Note: Use /setup-default-sandbox to   
  allow network access.                 
  按  enter 确 认 ， 按  esc 返 回
