codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__list_selection_view__tests__list_selection_model_picker_width_80.snap
---
source: tui_app_server/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  选 择 模 型 与 推 理 强 度                                                             
                                                                                
› 1. gpt-5.1-codex（ 当 前 ）   为  Codex 优 化 ， 平 衡 推 理 质 量 与 编 码 能 力 。              
  2. gpt-5.1-codex-mini     为  Codex 优 化 ， 更 便 宜 、 更 快 ， 但 能 力 稍 弱 。            
  3. gpt-4.1-codex          旧 版 模 型 。 需 要 兼 容 较 早 的 自 动 化 流 程 时 使 用 。
