codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap
---
source: tui_app_server/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
  Switch between Codex approval presets         
                                                
› 1. Read Only (current)  可 读 取 文 件             
  2. 完 全 访 问              可 编 辑 文 件             
                                                
  按  enter 确 认 ， 按  esc 返 回
